--- a/src/plugins/platforms/wayland/configure.json
+++ b/src/plugins/platforms/wayland/configure.json
@@ -81,6 +81,31 @@
             "condition": "features.draganddrop || features.clipboard",
             "output": [ "privateFeature" ]
         },
+        "wayland-client-ivi-shell": {
+            "label": "ivi-shell",
+            "condition": "features.wayland-client",
+            "output": [ "privateFeature" ]
+        },
+        "wayland-client-wl-shell": {
+            "label": "wl-shell (deprecated)",
+            "condition": "features.wayland-client",
+            "output": [ "privateFeature" ]
+        },
+        "wayland-client-xdg-shell": {
+            "label": "xdg-shell",
+            "condition": "features.wayland-client",
+            "output": [ "privateFeature" ]
+        },
+        "wayland-client-xdg-shell-v5": {
+            "label": "xdg-shell unstable v5 (deprecated)",
+            "condition": "features.wayland-client",
+            "output": [ "privateFeature" ]
+        },
+        "wayland-client-xdg-shell-v6": {
+            "label": "xdg-shell unstable v6",
+            "condition": "features.wayland-client",
+            "output": [ "privateFeature" ]
+        },
         "wayland-egl": {
             "label": "EGL",
             "condition": "features.wayland-client && features.opengl && features.egl && libs.wayland-egl",
@@ -138,6 +163,17 @@
                 "wayland-drm-egl-server-buffer",
                 "wayland-libhybris-egl-server-buffer",
                 "wayland-shm-emulation-server-buffer"
+            ]
+        },
+        {
+            "section": "Qt Wayland Client Shell Integrations",
+            "condition": "features.wayland-client",
+            "entries": [
+                "wayland-client-xdg-shell",
+                "wayland-client-xdg-shell-v5",
+                "wayland-client-xdg-shell-v6",
+                "wayland-client-ivi-shell",
+                "wayland-client-wl-shell"
             ]
         },
         "wayland-client"
