--- a/src/plugins/platforms/wayland/configure.json
+++ b/src/plugins/platforms/wayland/configure.json
@@ -110,6 +110,11 @@
             "label": "libhybris EGL",
             "condition": "features.wayland-client && features.opengl && features.egl && tests.libhybris-egl-server",
             "output": [ "privateFeature" ]
+        },
+        "wayland-shm-emulation-server-buffer": {
+            "label": "Shm emulation server buffer integration",
+            "condition": "features.wayland-client && features.opengl",
+            "output": [ "privateFeature" ]
         }
     },
 
@@ -131,7 +136,8 @@
                 "xcomposite-egl",
                 "xcomposite-glx",
                 "wayland-drm-egl-server-buffer",
-                "wayland-libhybris-egl-server-buffer"
+                "wayland-libhybris-egl-server-buffer",
+                "wayland-shm-emulation-server-buffer"
             ]
         },
         "wayland-client"
